2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc1x.c (elf32_m68hc11_size_stubs): Avoid crash when
	we have a local symbol in common section.

2003-07-08  Alan Modra  <amodra@bigpond.net.au>

	* elfcode.h (elf_object_p): Allocate tdata via _bfd_set_format.
	* elfcore.h (elf_core_file_p): Likewise.

2003-06-20  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* config.bfd: Add tic4x-*-rtems*.

2003-06-19  Alan Modra  <amodra@bigpond.net.au>

	* elf64-sparc.c (sparc64_elf_relocate_section): Ignore R_SPARC_DISP32
	reloc overflow on discarded eh_frame entries.

2003-06-18  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (cris_elf_relocate_section) <case
	R_CRIS_32_GOTREL>: When building a program, don't complain about a
	symbol from a normal object or an undefined weak symbol.

2003-06-18  Alan Modra  <amodra@bigpond.net.au>

	* elflink.h (elf_gc_record_vtentry): Revert last change.  Correct
	size calculation from addend.  Round size up.

2003-06-17  Nick Clifton  <nickc@redhat.com>

	* elflink.h (elf_gc_record_vtentry): Allocate an extra element
        in the vtable_entries_used array to allow for the accessing
        the largest element.

2003-06-12  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Bump version to 2.14.
	* configure: Regenerated.

2003-06-05  Daniel Jacobowitz  <drow@mvista.com>

	* elfcode.h (elf_slurp_reloc_table_from_section): Don't dereference
	NULL function pointers.

2003-06-04  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* coff-tic4x.c (ticoff0_swap_table, ticoff1_swap_table): Fixed
	initialization bug

2003-06-03  Nick Clifton  <nickc@redhat.com>

	* elf32-v850.c (v850_elf_howto_t): Rename R_V850_32to
	R_V850_ABS32.  Add entry for R_V850_REL32.
        (v850_elf_reloc_map): Likewise.
        (v850_elf_check_relocs): Likewise.
        (v850_elf_perform_relocation): Likewise.
        (v850_elf_final_link_relocate): Likewise.  Include computation
	to make R_V850_REl32 pc-relative.
          