@@ -1,3 +1,8 @@
+2003-08-05  Daniel Jacobowitz  <drow@mvista.com>
+
+	* elf32-arm.h (WILL_CALL_FINISH_DYNAMIC_SYMBOL): Define.
+	(elf32_arm_final_link_relocate, elf32_arm_relocate_section): Use it.
+
 2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* elf32-m68hc1x.c (elf32_m68hc11_size_stubs): Avoid crash when
